[gd_scene load_steps=6 format=3 uid="uid://c2p821bgegxi6"]

[ext_resource type="Script" uid="uid://cxy84ala2gkh5" path="res://organism.gd" id="1_5rwh6"]
[ext_resource type="AudioStream" uid="uid://dcba5p0qiu7le" path="res://assets/sounds/cartoon-bite1-freesound-community.wav" id="2_mgi51"]
[ext_resource type="AudioStream" uid="uid://cu0xhtmaxyjqb" path="res://assets/sounds/bubble-sound-freesound-community.wav" id="3_xrehl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5rwh6"]
radius = 10.198039

[sub_resource type="CircleShape2D" id="CircleShape2D_mgi51"]
radius = 22.022715

[node name="Organism" type="Area2D"]
collision_mask = 0
script = ExtResource("1_5rwh6")

[node name="Sprite" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5rwh6")

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_mgi51")

[node name="AncestorLabel" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -42.0
offset_right = 20.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="NourishmentLabel" type="Label" parent="."]
visible = false
anchors_preset = -1
offset_left = -20.0
offset_top = -45.0
offset_right = 20.0
offset_bottom = -22.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GroupSizeLabel" type="Label" parent="."]
visible = false
anchors_preset = -1
offset_left = -28.0
offset_top = -24.0
offset_right = 27.0
offset_bottom = -1.0
theme_override_font_sizes/font_size = 10
text = "Atomic"
horizontal_alignment = 1
vertical_alignment = 2

[node name="CountLabel" type="Label" parent="."]
visible = false
anchors_preset = -1
offset_left = -20.0
offset_top = -36.0
offset_right = 20.0
offset_bottom = -13.0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EatSFX" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_mgi51")
volume_db = -10.0
max_distance = 500.0

[node name="SpawnSFX" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_xrehl")
volume_db = -10.0
max_distance = 500.0

[node name="MergeSFX" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
volume_db = 5.0
max_distance = 500.0
